# ai_bootcamp

./: .gitignore  README.md  pyproject.toml  requirements.txt
02_classification/app/: app.py
02_classification/notes/: Classification All.ipynb
